--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Generate Datas
 on:
-  schedule: # execute every 12 hours
+  schedule:
     - cron: "* */12 * * *"
   workflow_dispatch:
 jobs:
@@ -10,10 +10,10 @@ jobs:
     steps:
       # Snake Animation
       - uses: Platane/snk@master
-        id: snake-gif
-with:
+        with:
           github_user_name: leviwp48
           svg_out_path: dist/github-contribution-grid-snake.svg
+          id: snake-gif
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
